--- a/roles/frontend/vars/main.yaml
+++ b/roles/frontend/vars/main.yaml
@@ -1,3 +1,3 @@
-BACKEND_HOST: backend.app-{{ ENVIRONMENT }}.srikanthaws.fun
+BACKEND_HOST: frontend1.srikanthaws.fun ##backend.app-{{ ENVIRONMENT }}.srikanthaws.fun
 APP_LOCAION: /usr/share/nginx/html
 COMPONENT: frontend
