--- a/inventory.ini
+++ b/inventory.ini
@@ -3,7 +3,7 @@ mysql-developer.srikanthaws.fun
 [backend]
 backend.app-dev.srikanthaws.fun
 [frontend]
-frontend1.srikanthaws.fun
+.srikanthaws.fun
 [all:vars]
 ansible_user=ec2-user
 ansible_password=DevOps321
